--- a/src/containers/MainLayout.css
+++ b/src/containers/MainLayout.css
@@ -13,14 +13,20 @@
 
 /* start nav-top area*/
 .nav-top{
+    background-color: #ffffff;
     grid-area: header;
-    background: #ffffff;
-    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .14);
+    padding: 0 1rem;
+    display: flex;
+    justify-content: space-between;
     z-index: 5001;
     position: sticky;
-    top:0;
+    top: 0;
+    align-items: center;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, .2), 0 3px 4px 0 rgba(0, 0,0, .12), 0 2px 4px 0 rgba(0, 0, 0, .14);
 }
-
+.nav-top li.logo {
+    margin-right: 150vh;
+}
 .nav-top ul{
     display: flex;
     align-items: center;
@@ -55,7 +61,9 @@
     margin:0 1em;
     text-decoration-line: none;
 }
-
+.nav-top a{
+    text-decoration: none;
+}
 /* start nav-side area*/
 
 .nav-side{
