--- a/src/containers/movies/Movie.css
+++ b/src/containers/movies/Movie.css
@@ -115,3 +115,20 @@
     height: 100%;
     
 }
+.Movie123 {
+    display: inline-flex;
+    flex-direction: column;
+    position: absolute;
+    color: #fff;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    font-size: 11px;
+    font-weight: 300;
+    padding: 10px 0;
+    background: linear-gradient(to top, #000, transparent);
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: .5s;
+}
